--- a/community.html
+++ b/community.html
@@ -5,8 +5,8 @@
 <head>
    <title>Community - </title>
    <link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
-   <link href='resources/site.css' rel='stylesheet' type='text/css'>
-   <link href='resources/syntax.css' rel='stylesheet' type='text/css'>
+   <link href='/resources/site.css' rel='stylesheet' type='text/css'>
+   <link href='/resources/syntax.css' rel='stylesheet' type='text/css'>
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
    </script>
 </head>
@@ -20,9 +20,9 @@
         <div class="container">
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
-           <li><a href="learn.html">Learn</a>
-           <li><a href="download.html">Download</a>
-           <li><a href="community.html">Community</a></li>
+           <li><a href="/learn.html">Learn</a>
+           <li><a href="/download.html">Download</a>
+           <li><a href="/community.html">Community</a></li>
            <li><a href="#top">Top</a></li>
           </ul>
         </div>
@@ -41,6 +41,7 @@
       </div>
       <div class="left page-description" id="vc">
           <p>A wonderful, highly engaged community that you can talk to and be a part of.</p>
+
       </div>
     </div>
     <div id="features" class="cf">
@@ -84,7 +85,8 @@
        </div>
      </div>
     <div id="pagecontent" class="cf">
-         
+      
+   
     </div>
    </div>
 
@@ -99,7 +101,7 @@
 
 
 
-<script type="text/javascript" src="jquery.scrollto.min.js"></script>
+<script type="text/javascript" src="/jquery.scrollto.min.js"></script>
 <script type="text/javascript">
    (function($){ $(function(){
      $("#top").click(function(){ $("#intro").ScrollTo(); })
