--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
     <title>simple build tool</title>
      <link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
-     <link href='resources/site.css' rel='stylesheet' type='text/css'>  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
+     <link href='/resources/site.css' rel='stylesheet' type='text/css'>  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
        </script>
      </head>
      <body class="cf">
@@ -16,9 +16,9 @@
         <div class="container">
           <a class="brand" href="/">SBT</a>
           <ul class="nav">
-           <li><a href="learn.html">Learn</a>
-           <li><a href="download.html">Download</a>
-           <li><a href="community.html">Community</a></li>
+           <li><a href="/learn.html">Learn</a>
+           <li><a href="/download.html">Download</a>
+           <li><a href="/community.html">Community</a></li>
            <li><a href="#top">Top</a></li>
           </ul>
         </div>
