--- a/plugins.html
+++ b/plugins.html
@@ -331,6 +331,7 @@
 <li><a href="https://github.com/eed3si9n/sbt-inspectr">sbt-inspectr</a> (Displays settings dependency tree)</li>
 <li><a href="https://github.com/spray/sbt-revolver">sbt-revolver</a> (Triggered restart, hot reloading)</li>
 <li><a href="https://github.com/kjellwinblad/sbt-scalaedit-plugin">sbt-scalaedit</a> (Open and upgrade ScalaEdit (text editor))</li>
+<li><a href="https://github.com/jberkel/sbt-dropbox-plugin/">sbt-dropbox-plugin</a> (Transfer files to Dropbox)</li>
 </ul>
 
 </li>
