--- a/repository-rules.html
+++ b/repository-rules.html
@@ -5,7 +5,7 @@
 <head>
    <title>Community Repository Policy - </title>
    <link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
-   <link href='/resources/site.css' rel='stylesheet' type='text/css'>
+   <link href='/resources/howto-site.css' rel='stylesheet' type='text/css'>
    <link href='/resources/syntax.css' rel='stylesheet' type='text/css'>
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
    </script>
