--- a/community-plugins.html
+++ b/community-plugins.html
@@ -108,7 +108,7 @@
 
 <p><a href="http://www.typesafe.com">Typesafe, Inc.</a> has provided a freely available <a href="http://scalasbt.artifactoryonline.com/scalasbt">Ivy Repository</a> for SBT projects to make use of.</p>
 
-<p>If you would like to publish your project to this Ivy repository, first contact Joshua.Suereth@typesafe.com and request privileges
+<p>If you would like to publish your project to this Ivy repository, first contact <a href="http://groups.google.com/group/sbt-repo-admins?hl=en">sbt-repo-admins</a> and request privileges
 (we have to verify code ownership, rights to publish, etc.).  After which, you can deploy your plugins using the following configuration:</p>
 
 <pre><code>publishTo := Some(Resolver.url("sbt-plugin-releases", new URL("http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases/"))(Resolver.ivyStylePatterns))
