--- a/download.html
+++ b/download.html
@@ -178,7 +178,7 @@ add the bin/ to your path.</p>
 
 <h4>By Hand installation</h4>
 
-<p>First, download the <a href="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.11.3/sbt-launch.jar">launcher jar</a>
+<p>First, download the <a href="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.11.3-2/sbt-launch.jar">launcher jar</a>
 and place it somewhere useful.
 THEN, create a script in that same directory.</p>
 
