--- a/download.html
+++ b/download.html
@@ -121,7 +121,7 @@
          
            <li id="windows" class="feature contained"><h4>Windows Releases</h4>
 
-<p><a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt-launcher/0.11.3/sbt.msi">Click here</a> for the latest windows MSI.</p>
+<p><a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt/0.12.0/sbt.msi">Click here</a> for the latest windows MSI.</p>
 
 <p><em>Note: please make sure to report any issues you may find <a href="https://github.com/sbt/sbt-launcher-package/issues">here</a>.</em></p>
 </li>
@@ -172,13 +172,13 @@ Then run:</p>
          
            <li id="manual" class="feature contained"><h4>Pre-Built Zip files</h4>
 
-<p>Download one of the pre-built <a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt-launcher/0.11.3/sbt.zip">zip</a>
-or <a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt-launcher/0.11.3/sbt.tgz">tgz</a> and
+<p>Download one of the pre-built <a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt/0.12.0/sbt.zip">zip</a>
+or <a href="http://scalasbt.artifactoryonline.com/scalasbt/sbt-native-packages/org/scala-sbt/sbt/0.12.0/sbt.tgz">tgz</a> and
 add the bin/ to your path.</p>
 
 <h4>By Hand installation</h4>
 
-<p>First, download the <a href="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.11.3-2/sbt-launch.jar">launcher jar</a>
+<p>First, download the <a href="http://typesafe.artifactoryonline.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.12.0/sbt-launch.jar">launcher jar</a>
 and place it somewhere useful.
 THEN, create a script in that same directory.</p>
 
