--- a/plugins.html
+++ b/plugins.html
@@ -251,6 +251,7 @@
 <li><a href="https://github.com/sbt/sbt-assembly">sbt-assembly</a></li>
 <li><a href="https://github.com/siasia/xsbt-proguard-plugin">xsbt-proguard-plugin</a></li>
 <li><a href="https://github.com/reaktor/sbt-deploy">sbt-deploy</a></li>
+<li><a href="https://github.com/sbt/sbt-appbundle">sbt-appbundle</a></li>
 </ul>
 
 </li>
