--- a/repository-rules.html
+++ b/repository-rules.html
@@ -40,10 +40,10 @@
       <p>The community repository has the following guideline for artifacts published to it:</p>
 
 <ol>
-<li><p>All pubished artifacts are the authors own work or have an appropriate License which grants distribution rights</p></li>
-<li><p>All published artifacts come from open source projects, that have an open patch acceptance policy</p></li>
-<li><p>All published artifacts are placed under an organization in a DNS domain for which you permission to use or are an owner.  (scala-sbt.org is available for SBT plugins).</p></li>
-<li><p>All published artifacts are signed by a committer of the project (Coming Soon).</p></li>
+<li><p>All pubished artifacts are the authors own work or have an appropriate license which grants distribution rights.</p></li>
+<li><p>All published artifacts come from open source projects, that have an open patch acceptance policy.</p></li>
+<li><p>All published artifacts are placed under an organization in a DNS domain for which you have the permission to use or are an owner (scala-sbt.org is available for SBT plugins).</p></li>
+<li><p>All published artifacts are signed by a committer of the project (coming soon).</p></li>
 </ol>
 
    
