--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -1,5 +1,6 @@
 ---
 title: Download
+sbtversion: 0.13.2
 ---
 
 <div class="arc_mac">
@@ -19,17 +20,35 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-Download <a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.2/sbt-0.13.2.msi">MSI</a>
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
-<h2>Linux</h2>
+  <div class="distro_debian">
+  	<h2>Linux (deb)</h2>
+  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.deb</a>
+  </div>
 
-Do this for Linux
+  <div class="distro_redhad">
+  	<h2>Linux (rpm)</h2>
+  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.rpm</a>
+  </div>
+
+  <div class="distro_gentoo">
+  	<h2>Gentoo</h2>
+  	See <a href="http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html#gentoo">instruction for ebuilds</a> (third-party package). 
+  </div>
+</div>
+
+<div clsas="arg_all">
+<h2>All platforms</h2>
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.zip</a>
+
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.tgz</a>
 </div>
 
 <div class="arc_all">
 <h2>Manual installation</h2>
 
-Do this for manual installation
+See <a href="http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html#manual-installation">instruction for manual installation</a>.
 </div>
