--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -1,6 +1,5 @@
 ---
 title: Download
-sbtversion: 0.13.2
 ---
 
 <div class="arc_mac">
@@ -20,35 +19,35 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.msi</a>
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtVersion] %>/sbt-<%= @item[:sbtVersion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtVersion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
   <div class="distro_debian">
   	<h2>Linux (deb)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.deb</a>
+  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtVersion] %>/sbt-<%= @item[:sbtVersion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtVersion] %>.deb</a>
   </div>
 
   <div class="distro_redhad">
   	<h2>Linux (rpm)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.rpm</a>
+  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtVersion] %>/sbt-<%= @item[:sbtVersion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtVersion] %>.rpm</a>
   </div>
 
   <div class="distro_gentoo">
   	<h2>Gentoo</h2>
-  	See <a href="http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html#gentoo">instruction for ebuilds</a> (third-party package). 
+  	See <a href="<%= @item[:sbtBinaryVersion] %>/tutorial/Installing-sbt-on-Linux.html#Gentoo">instruction for ebuilds</a> (third-party package). 
   </div>
 </div>
 
 <div clsas="arg_all">
 <h2>All platforms</h2>
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.zip</a>
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtVersion] %>/sbt-<%= @item[:sbtVersion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtVersion] %>.zip</a>
 
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtversion] %>/sbt-<%= @item[:sbtversion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtversion] %>.tgz</a>
+<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @item[:sbtVersion] %>/sbt-<%= @item[:sbtVersion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @item[:sbtVersion] %>.tgz</a>
 </div>
 
 <div class="arc_all">
 <h2>Manual installation</h2>
 
-See <a href="http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html#manual-installation">instruction for manual installation</a>.
+See <a href="<%= @item[:sbtBinaryVersion] %>/tutorial/Manual-Installation.html">instruction for manual installation</a>.
 </div>
