--- a/documentation.html
+++ b/documentation.html
@@ -45,14 +45,14 @@
 
 <ul>
 <li><a href="0.13/tutorial/index.html">sbt tutorial</a></li>
-<li><a href="0.13/reference/index.html">sbt reference manual</a></li>
-<li><a href="http://www.scala-sbt.org/0.13.2/api/index.html">sbt API</a></li>
+<li><a href="0.13/docs/index.html">sbt reference manual</a></li>
+<li><a href="0.13.2/api/index.html">sbt API</a></li>
 </ul>
 <h2>sbt 0.12</h2>
 
 <ul>
-<li><a href="http://www.scala-sbt.org/0.12.4/docs/index.html">sbt documentation</a></li>
-<li><a href="http://www.scala-sbt.org/0.12.4/api/index.html">sbt API</a></li>
+<li><a href="0.12.4/docs/index.html">sbt documentation</a></li>
+<li><a href="0.12.4/api/index.html">sbt API</a></li>
 </ul>
 </div>
         </div>
