fixes rpm and deb links

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -25,12 +25,12 @@ $ port install sbt
 <div class="arc_linux">
   <div class="distro_debian">
   	<h2>Linux (deb)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.deb</a>
+  	<a href="http://dl.bintray.com/sbt/debian/sbt-<%= @site.config[:sbtVersion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.deb</a>
   </div>
 
   <div class="distro_redhad">
   	<h2>Linux (rpm)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.rpm</a>
+  	<a href="http://dl.bintray.com/sbt/rpm/sbt-<%= @site.config[:sbtVersion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.rpm</a>
   </div>
 
   <div class="distro_gentoo">
