--- a/download.html
+++ b/download.html
@@ -64,12 +64,12 @@ $ port install sbt
 <div class="arc_linux">
   <div class="distro_debian">
   	<h2>Linux (deb)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.deb" class="btn btn-primary btn-lg active" role="button">sbt-0.13.5.deb</a>
+  	<a href="http://dl.bintray.com/sbt/debian/sbt-0.13.5.deb" class="btn btn-primary btn-lg active" role="button">sbt-0.13.5.deb</a>
   </div>
 
   <div class="distro_redhad">
   	<h2>Linux (rpm)</h2>
-  	<a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.rpm" class="btn btn-primary btn-lg active" role="button">sbt-0.13.5.rpm</a>
+  	<a href="http://dl.bintray.com/sbt/rpm/sbt-0.13.5.rpm" class="btn btn-primary btn-lg active" role="button">sbt-0.13.5.rpm</a>
   </div>
 
   <div class="distro_gentoo">
