--- a/0.13/tutorial/es/offline/Combined+Pages.html
+++ b/0.13/tutorial/es/offline/Combined+Pages.html
@@ -87,8 +87,8 @@ estos paquetes a los mantenedores respectivos.
 </p><!-- TODO: Translate to Spanish -->
 <h2 id="Installing+sbt+on+Linux">Installing sbt on Linux<a href="#Installing+sbt+on+Linux" class="header-link"><span class="header-link-content">&nbsp;</span></a></h2><h3 id="Installing+from+a+universal+package">Installing from a universal package<a href="#Installing+from+a+universal+package" class="header-link"><span class="header-link-content">&nbsp;</span></a></h3><p>Download <a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.zip">ZIP</a> or <a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.tgz">TGZ</a> package and expand it.
 </p><h3 id="RPM+and+DEB">RPM and DEB<a href="#RPM+and+DEB" class="header-link"><span class="header-link-content">&nbsp;</span></a></h3><p>The following packages are also officially supported:
-</p><ul><li><a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.rpm">RPM</a> package
-</li><li><a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.deb">DEB</a> package
+</p><ul><li><a href="http://dl.bintray.com/sbt/rpm/sbt-0.13.5.rpm">RPM</a> package
+</li><li><a href="http://dl.bintray.com/sbt/debian/sbt-0.13.5.deb">DEB</a> package
 </li></ul><blockquote><p><strong>Note:</strong> Por favor reporte cualquier problema que se tenga con los paquetes
 arriba mencionados al projecto
 <a href="https://github.com/sbt/sbt-launcher-package">sbt-launcher-package</a>.
