--- a/0.13/tutorial/ja/offline/Installing-sbt-on-Linux.html
+++ b/0.13/tutorial/ja/offline/Installing-sbt-on-Linux.html
@@ -41,8 +41,8 @@
           <div class="span-16 prepend-1 append-1 contents">
             <h2 id="Linux+%E3%81%B8%E3%81%AE+sbt+%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB">Linux への sbt のインストール<a href="#Linux+%E3%81%B8%E3%81%AE+sbt+%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB" class="header-link"><span class="header-link-content">&nbsp;</span></a></h2><h3 id="%E3%83%A6%E3%83%8B%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB%E3%83%91%E3%83%83%E3%82%B1%E3%83%BC%E3%82%B8%E3%81%8B%E3%82%89%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB">ユニバーサルパッケージからのインストール<a href="#%E3%83%A6%E3%83%8B%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB%E3%83%91%E3%83%83%E3%82%B1%E3%83%BC%E3%82%B8%E3%81%8B%E3%82%89%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB" class="header-link"><span class="header-link-content">&nbsp;</span></a></h3><p><a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.zip">ZIP</a> か <a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.tgz">TGZ</a> をダウンロードしてきて解凍する。
 </p><h3 id="RPM+and+DEB">RPM and DEB<a href="#RPM+and+DEB" class="header-link"><span class="header-link-content">&nbsp;</span></a></h3><p>以下のパッケージも公式にサポートしている:
-</p><ul><li><a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.rpm">RPM</a> package
-</li><li><a href="http://dl.bintray.com/sbt/native-packages/sbt/0.13.5/sbt-0.13.5.deb">DEB</a> package
+</p><ul><li><a href="http://dl.bintray.com/sbt/rpm/sbt-0.13.5.rpm">RPM</a> package
+</li><li><a href="http://dl.bintray.com/sbt/debian/sbt-0.13.5.deb">DEB</a> package
 </li></ul><blockquote><p><strong>注意:</strong> これらのパッケージに問題があれば、
 <a href="https://github.com/sbt/sbt-launcher-package">sbt-launcher-package</a>
 プロジェクトに報告してほしい。
