Give HTTPS download urls for SBT
...in celebration of SBT 0.13.6, which uses HTTPS to access Maven Central.

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,18 +19,18 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.msi</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
   <div class="distro_debian">
   	<h2>Linux (deb)</h2>
-  	<a href="http://dl.bintray.com/sbt/debian/sbt-<%= @site.config[:sbtVersion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.deb</a>
+  	<a href="https://dl.bintray.com/sbt/debian/sbt-<%= @site.config[:sbtVersion] %>.deb" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.deb</a>
   </div>
 
   <div class="distro_redhad">
   	<h2>Linux (rpm)</h2>
-  	<a href="http://dl.bintray.com/sbt/rpm/sbt-<%= @site.config[:sbtVersion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.rpm</a>
+  	<a href="https://dl.bintray.com/sbt/rpm/sbt-<%= @site.config[:sbtVersion] %>.rpm" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.rpm</a>
   </div>
 
   <div class="distro_gentoo">
@@ -41,9 +41,9 @@ $ port install sbt
 
 <div clsas="arg_all">
 <h2>All platforms</h2>
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.zip</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.zip</a>
 
-<a href="http://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.tgz</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.tgz</a>
 </div>
 
 <div class="arc_all">
