more styles and tweaks - pixel pushing

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -49,9 +49,9 @@ sudo yum install sbt
 
 <div clsas="arg_all">
 <h2>All platforms</h2>
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.zip" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.zip</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.zip</a>
 
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.tgz" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.tgz</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.tgz</a>
 </div>
 
 <div class="arc_all">
