added favicon, correct css class name for windows download button

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.msi" class="btn btn-primary btn-lg active" role="button">sbt-<%= @site.config[:sbtVersion] %>.msi</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.msi" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
