Use https to fetch packages

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -26,7 +26,7 @@ $ port install sbt
   <div class="distro_debian">
   	<h2>Linux (deb)</h2>
 <pre>
-echo "deb http://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
+echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
 sudo apt-get update
 sudo apt-get install sbt
 </pre>
