--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -1,4 +1,4 @@
----
+d---
 title: Download
 ---
 
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.msi" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.msi</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.msi" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
@@ -44,19 +44,19 @@ sudo yum install sbt
 
   <div class="distro_gentoo">
   	<h2>Gentoo</h2>
-  	See <a href="<%= @site.config[:sbtBinaryVersion] %>/tutorial/Installing-sbt-on-Linux.html#Gentoo">instruction for ebuilds</a> (third-party package). 
+  	See <a href="<%= @config[:sbtBinaryVersion] %>/tutorial/Installing-sbt-on-Linux.html#Gentoo">instruction for ebuilds</a> (third-party package). 
   </div>
 </div>
 
 <div clsas="arg_all">
 <h2>All platforms</h2>
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.zip</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
-<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @site.config[:sbtVersion] %>/sbt-<%= @site.config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @site.config[:sbtVersion] %>.tgz</a>
+<a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
 </div>
 
 <div class="arc_all">
 <h2>Manual installation</h2>
 
-See <a href="<%= @site.config[:sbtBinaryVersion] %>/tutorial/Manual-Installation.html">instruction for manual installation</a>.
+See <a href="<%= @config[:sbtBinaryVersion] %>/tutorial/Manual-Installation.html">instruction for manual installation</a>.
 </div>
