Minor changes to setup instructions.

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -48,15 +48,9 @@ sudo yum install sbt
   </div>
 </div>
 
-<div clsas="arg_all">
+<div clsas="arc_all">
 <h2>All platforms</h2>
 <a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
 <a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
-</div>
-
-<div class="arc_all">
-<h2>Manual installation</h2>
-
-See <a href="<%= @config[:sbtBinaryVersion] %>/docs/Manual-Installation.html">instruction for manual installation</a>.
 </div>
