--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -48,7 +48,7 @@ sudo yum install sbt
   </div>
 </div>
 
-<div clsas="arc_all">
+<div class="arc_all">
 <h2>All platforms</h2>
 <a href="https://dl.bintray.com/sbt/native-packages/sbt/<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
