--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:windowsBuild] %>/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.msi</a>
+<a href="<%= @config[:sbt_native_package_base] %>/<%= @config[:windows_download_version_str] %>msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
 </div>
 
 <div class="arc_linux">
@@ -50,7 +50,7 @@ sudo yum install sbt
 
 <div class="arc_all">
 <h2>All platforms</h2>
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
+<a href="<%= @config[:sbt_native_package_base] %>/<%= @config[:download_version_str] %>zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
+<a href="<%= @config[:sbt_native_package_base] %>/<%= @config[:download_version_str] %>tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
 </div>
