Enable landing page on 1.x branch

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -5,9 +5,9 @@ title: Download
 <div class="arc_mac">
 <h2>Mac</h2>
 
-<h3>Homebrew (Third-party package)</h3>
+<h3>Homebrew</h3>
 <pre>
-$ brew install sbt
+$ brew install sbt@1
 </pre>
 
 <h3>Macports (Third-party package)</h3>
