--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:windowsBuild] %>/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.msi</a>
+<a href="https://cocl.us/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.msi</a>
 </div>
 
 <div class="arc_linux">
@@ -50,7 +50,42 @@ sudo yum install sbt
 
 <div class="arc_all">
 <h2>All platforms</h2>
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
+<a href="https://cocl.us/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
+
+<a href="https://cocl.us/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
 </div>
+
+<h3>Previous releases</h3>
+
+<h4>1.x</h4>
+<ul>
+<li>
+  sbt 1.0.0
+  (<a href="https://cocl.us/sbt-1.0.0.zip">.zip</a>)
+  (<a href="https://cocl.us/sbt-1.0.0.tgz">.tgz</a>)
+  (<a href="https://cocl.us/sbt-1.0.0.msi">.msi</a>)
+</li>
+
+</ul>
+
+<h4>0.13</h4>
+<ul>
+<li>
+  sbt 0.13.16 
+  (<a href="https://cocl.us/sbt-0.13.16.zip">.zip</a>)
+  (<a href="https://cocl.us/sbt-0.13.16.tgz">.tgz</a>)
+  (<a href="https://cocl.us/sbt-0.13.16.msi">.msi</a>)
+</li>
+
+<li>
+  sbt 0.13.15
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.15/sbt-0.13.15.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.15/sbt-0.13.15.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.15/sbt-0.13.15.msi">.msi</a>)
+</li>
+
+</ul>
+
+
+
