--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -60,11 +60,19 @@ sudo yum install sbt
 
 <h4>1.x</h4>
 <ul>
+
+<li>
+  sbt 1.0.1
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.msi">.msi</a>)
+</li>
+
 <li>
   sbt 1.0.0
-  (<a href="https://cocl.us/sbt-1.0.0.zip">.zip</a>)
-  (<a href="https://cocl.us/sbt-1.0.0.tgz">.tgz</a>)
-  (<a href="https://cocl.us/sbt-1.0.0.msi">.msi</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.msi">.msi</a>)
 </li>
 
 </ul>
